# server-phishing-basic

./: config.json  production.yml
systemd/: phishing-server  phishing.service
tracker_app/: Dockerfile  app.py  pyproject.toml  requirements.txt
tracker_app/files/: Descuentos_SENATI_Colaboradores_Marzo 2025.docx
traefik/: Dockerfile  dynamic-config.yml  traefik.yml
traefik/conf/: dynamic_conf.yml  traefik.yml
