[project]
name = "tracker-app"
version = "0.1.0"
description = ""
authors = [
    {name = "carlos lopez",email = "krlosaren@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
fastapi = {extras = ["all"], version = "^0.115.11"}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
